deployment/openmetadata/kustomize/base/deployment-manifest/deployment-openmetadata.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: openmetadata
  labels:
    app.kubernetes.io/instance: openmetadata
    app.kubernetes.io/name: openmetadata
    app.kubernetes.io/part-of: openmetadata
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: openmetadata
      app.kubernetes.io/name: openmetadata
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: openmetadata
        app.kubernetes.io/name: openmetadata
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 5
      securityContext: {}
      containers:
        - resources:
            limits:
              cpu: '1'
              memory: 4Gi
            requests:
              cpu: 500m
              memory: 1Gi
          terminationMessagePath: /dev/termination-log
          name: openmetadata
          ports:
            - containerPort: 8585
              protocol: TCP
            - containerPort: 8586
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: data-logs
              mountPath: /opt/openmetadata/logs
          terminationMessagePolicy: File
          image: 'docker.getcollate.io/openmetadata/server:1.2.2'
          env: []
      volumes:
        - name: data-logs
          emptyDir: {}
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
