deployment/openmetadata/kustomize/base/deployment-manifest/deployment-postgres.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: openmetadatadb
  labels:
    app.kubernetes.io/instance: openmetadata
    app.kubernetes.io/name: openmetadatadb
    app.kubernetes.io/part-of: openmetadata
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: openmetadata
      app.kubernetes.io/name: openmetadatadb
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: openmetadata
        app.kubernetes.io/name: openmetadatadb
    spec:
      restartPolicy: Always
      serviceAccountName: default
      securityContext: {}
      containers:
        - resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 300Mi
          readinessProbe:
            exec:
              command:
                - /usr/libexec/check-container
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: openmetadatadb
          livenessProbe:
            exec:
              command:
                - /usr/libexec/check-container
                - '--live'
            initialDelaySeconds: 120
            timeoutSeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          ports:
            - containerPort: 5432
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: openmetadatadb
              mountPath: /var/lib/pgsql/data
          terminationMessagePolicy: File
          image: 'registry.redhat.io/rhel8/postgresql-13:1-56'
      serviceAccount: default
      volumes:
        - name: openmetadatadb
          persistentVolumeClaim:
            claimName: openmetadatadb
      dnsPolicy: ClusterFirst
  strategy:
    type: Recreate
