deployment/openmetadata/kustomize/base/deployment-manifest/route-elasticsearch.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
    app.kubernetes.io/component: elasticsearch
    app.kubernetes.io/instance: elasticsearch
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/part-of: openmetadata
spec:
  to:
    kind: Service
    name: elasticsearch
    weight: 100
  port:
    targetPort: 9200-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
