deployment/openmetadata/kustomize/base/deployment-manifest/route-openmetadata.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: openmetadata
  labels:
    app.kubernetes.io/instance: openmetadata
    app.kubernetes.io/name: openmetadata
spec:
  to:
    kind: Service
    name: openmetadata
    weight: 100
  port:
    targetPort: 8585-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
